Fixed read time estimate overlapping with heading

--- a/css/style.css
+++ b/css/style.css
@@ -102,18 +102,19 @@ a.link-icon {
 
 .section-title {
 	margin: 0;
+	line-height: 1.6em;
 }
 
 .section-abstract p {
 	font-style: italic;
-	margin-top: 0.5em;
+	margin-top: 1em;
 	font-size: 0.9em;
 }
 
 .read-time {
-	font-size: 0.8em;
+	font-size: 0.7em;
 	margin: 0;
-	margin-top: -1em;
+	margin-bottom: -1.5em;
 	line-height: 1em;
 	text-align: right;
 }
